--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,5 +1,18 @@
-@import 'tailwindcss/base';
+@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap');
 
-@import 'tailwindcss/components';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-@import 'tailwindcss/utilities';
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
+.main-btn {
+    border-top-right-radius: 0px;
+}
