--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap');
-
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 html {
     scroll-behavior: smooth;
@@ -11,8 +9,4 @@ html {
 
 body {
     font-family: 'Nunito', sans-serif;
-}
-
-.main-btn {
-    border-top-right-radius: 0px;
 }
