--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,7 +33,7 @@ h6 {
   @apply opacity-0;
 }
 .navbarTogglerActive > span:nth-child(3) {
-  @apply top-[-8px] rotate-[135deg];
+  @apply top-[-8px] transform rotate-[135deg];
 }
 
 .prose iframe.proseIframe {
