--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -18,7 +18,13 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: Poppins, Futura, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+}
+
+header a {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
 }
 
 #landingCoverImg {
