--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body,
 button,
 input,
@@ -62,4 +66,9 @@ header a {
 
 .text-end {
   text-align: end;
+}
+
+.sticky {
+  @apply fixed z-[9995] transition bg-white bg-opacity-80 dark:bg-primary dark:bg-opacity-20;
+  backdrop-filter: blur(5px);
 }
