--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,3 +66,10 @@ header a {
   @apply fixed z-[9995] transition bg-white bg-opacity-80 dark:bg-primary dark:bg-opacity-20;
   backdrop-filter: blur(5px);
 }
+
+img.floatRight {
+  float: right;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  max-width: 40%;
+}
