more trancedance page fixes

--- a/assets/css/prose.css
+++ b/assets/css/prose.css
@@ -108,7 +108,7 @@
   line-height: 1.3333333;
 }
 .prose h3 {
-  color: inherit;
+  color: rgb(107 114 128);
   font-weight: 600;
   font-size: 1.25em;
   margin-top: 1.6em;
