--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,11 +62,12 @@ header a {
   position: relative; 
   width: 100%; 
   height: 100vh;
-  max-height: 260px;
+  max-height: 315px;
 }
 @media only screen and (min-width: 960px) {
   iframe.proseIframeSmall {
-    max-height: 250px !important;
+    max-width: 560px !important;
+    max-height: 315px !important;
   }
 }
 
