--- a/assets/css/prose.css
+++ b/assets/css/prose.css
@@ -486,8 +486,7 @@
   margin-bottom: 0;
 }
 
-
-@media (min-width: 640px) {
+@media (min-width: 720px) {
   .prose .col-left,
   .prose .col-right {
     width: 50%;
@@ -502,5 +501,10 @@
   }
   .prose .col-clear {
     clear: left;
+  }
+}
+@media (max-width: 719px) {
+  .prose h1 {
+    font-size: 1.9em;
   }
 }
