--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,14 +80,14 @@ header a {
   backdrop-filter: blur(5px);
 }
 
-#iubenda-cs-banner .iubenda-cs-opt-group button, 
-#iubenda-iframe .iub-btn-consent,
-#iubenda-iframe #iubFooterBtnContainer button {
+html>body>#iubenda-cs-banner .iubenda-cs-opt-group button, 
+html>body>#iubenda-iframe .iub-btn-consent,
+html>body>#iubenda-iframe #iubFooterBtnContainer button {
     @apply !rounded-md
 }
-#iubenda-iframe #iubFooterBtnContainer button {
+html>body>#iubenda-iframe #iubFooterBtnContainer button {
     background-color: #BFAC22!important;
 }
-#iubenda-cs-banner .iubenda-banner-content h1 {
+html>body>#iubenda-cs-banner .iubenda-banner-content h1 {
     @apply text-xl text-primary mb-2
 }
