start new branding: Montserrat font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,26 +3,18 @@
 @tailwind components;
 @tailwind utilities;
 
-body,
-button,
-input,
-select,
-textarea {
-    font-family: -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
 }
 
 header a {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
 
