--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -62,6 +62,7 @@ html.ud-dark .prose {
 .prose a {
   font-weight: inherit;
   text-decoration: none;
+  border-bottom: 1px solid transparent;
 }
 .prose a:hover {
   border-bottom: 1px solid rgba(125, 125, 125, 0.3);
