--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,21 +1,13 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+html {
+  font-family: 'Ubuntu', sans-serif;
 }
-
 header a {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+  font-family: 'Ubuntu', sans-serif;    
+  font-weight: 400;
 }
 
 .navbarTogglerActive > span:nth-child(1) {
