--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,39 +1,7 @@
-
-@font-face {
-    font-family: 'mic32';
-    src: url('/fonts/58405e358c3b387807fb206f187b0aa4-webfont.woff2') format('woff2'),
-         url('/fonts/58405e358c3b387807fb206f187b0aa4-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+html {
+    font-family: montserrat, Verdana, sans-serif;
 }
 
-@font-face {
-    font-family: 'mic32fallback';
-    src: local('Helvetica Neue');
-    size-adjust: 93%;
-}
-@font-face {
-    font-family: 'montserrat';
-    src: url('/fonts/montserrat-light-webfont.woff2') format('woff2'),
-         url('/fonts/montserrat-light-webfont.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'montserrat';
-    src: url('/fonts/montserrat-regular-webfont.woff2') format('woff2'),
-         url('/fonts/montserrat-regular-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'montserrat';
-    src: url('/fonts/montserrat-medium-webfont.woff2') format('woff2'),
-         url('/fonts/montserrat-medium-webfont.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+h1, h2, h1 a, h2 a, h3 a, h4 a {
+    font-family: mic32, mic32fallback, "Helvetica Neue", sans-serif;
 }
