--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,11 @@
-html {
-    font-family: montserrat, Verdana, sans-serif;
-    font-weight: 400;
+@tailwind base;
+@layer base {
+  html > body {
+    @apply font-sans;
+  }
+  h1, h2, h1 a, h2 a, h3 a, h4 a {
+    @apply font-mic32;
+  }
 }
-
-h1, h2, h1 a, h2 a, h3 a, h4 a {
-    font-family: mic32, mic32fallback, "Helvetica Neue", sans-serif;
-}
+@tailwind components;
+@tailwind utilities;
